--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -93,6 +93,31 @@ const makeTitle = title
         },
       }}
     />
+    <script src="https://www.googletagmanager.com/gtag/js?id=P4LTKG3" is:inline
+    ></script>
+    <script
+      type="text/plain"
+      data-category="analytics"
+      data-service="Google Analytics"
+      is:inline
+    >
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "P4LTKG3");
+    </script>
+    <script type="text/plain" data-category="analytics" is:inline>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "P4LTKG3");
+    </script>
   </head>
   <!-- <Cookie /> -->
   <body class="dark:bg-stone-950">
@@ -184,30 +209,6 @@ const makeTitle = title
           },
         },
       });
-    </script>
-    <script src="https://www.googletagmanager.com/gtag/js?id=P4LTKG3" is:inline
-    ></script>
-    <script
-      type="text/plain"
-      data-category="analytics"
-      data-service="Google Analytics"
-    >
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "P4LTKG3");
-    </script>
-    <script type="text/plain" data-category="analytics" is:inline>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "P4LTKG3");
     </script>
 
     <Footer />
