--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -95,6 +95,9 @@ const makeTitle = title
     />
     <script src="https://www.googletagmanager.com/gtag/js?id=P4LTKG3" is:inline
     ></script>
+    <!-- Google Tag Manager -->
+    <script is:inline></script>
+    <!-- End Google Tag Manager -->
     <script
       type="text/plain"
       data-category="analytics"
@@ -109,6 +112,17 @@ const makeTitle = title
       gtag("js", new Date());
 
       gtag("config", "P4LTKG3");
+
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-P4LTKG3");
     </script>
     <script type="text/plain" data-category="analytics" is:inline>
       console.log("triggered by cookie chimp v2");
@@ -124,13 +138,13 @@ const makeTitle = title
   <!-- <Cookie /> -->
   <body class="dark:bg-stone-950">
     <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe
-        src="https://service.monolithon.com/ns.html?id=GTM-P4LTKG3"
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-P4LTKG3"
         height="0"
         width="0"
-        style="display:none;visibility:hidden"></iframe>
-    </noscript>
+        style="display:none;visibility:hidden"></iframe></noscript
+    >
     <!-- End Google Tag Manager (noscript) -->
     <Navbar />
     <slot />
