refactor: Update Google Tag Manager code to use new service URL

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -93,10 +93,10 @@ const makeTitle = title
         },
       }}
     />
-    <script src="https://www.googletagmanager.com/gtag/js?id=P4LTKG3" is:inline
-    ></script>
     <!-- Google Tag Manager -->
-    <script is:inline></script>
+    <script
+      src="https://www.service.monolithon.com/gtag/js?id=P4LTKG3"
+      is:inline></script>
     <!-- End Google Tag Manager -->
     <script
       type="text/plain"
@@ -120,7 +120,7 @@ const makeTitle = title
           j = d.createElement(s),
           dl = l != "dataLayer" ? "&l=" + l : "";
         j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        j.src = "https://www.service.monolithon.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-P4LTKG3");
     </script>
@@ -140,7 +140,7 @@ const makeTitle = title
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-P4LTKG3"
+        src="https://www.service.monolithon.com/ns.html?id=GTM-P4LTKG3"
         height="0"
         width="0"
         style="display:none;visibility:hidden"></iframe></noscript
