--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -94,10 +94,10 @@ const makeTitle = title
       }}
     />
     <!-- Google Tag Manager -->
-    <script
-      src="https://www.service.monolithon.com/gtag/js?id=P4LTKG3"
-      is:inline></script>
+    <script src="https://service.monolithon.com/gtag/js?id=P4LTKG3" is:inline
+    ></script>
     <!-- End Google Tag Manager -->
+
     <script
       type="text/plain"
       data-category="analytics"
@@ -120,9 +120,9 @@ const makeTitle = title
           j = d.createElement(s),
           dl = l != "dataLayer" ? "&l=" + l : "";
         j.async = true;
-        j.src = "https://www.service.monolithon.com/gtm.js?id=" + i + dl;
+        j.src = "https://service.monolithon.com/tyynmnmx.js?st=" + i + dl + "";
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-P4LTKG3");
+      })(window, document, "script", "dataLayer", "P4LTKG3");
     </script>
     <script type="text/plain" data-category="analytics" is:inline>
       console.log("triggered by cookie chimp v2");
@@ -140,7 +140,7 @@ const makeTitle = title
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.service.monolithon.com/ns.html?id=GTM-P4LTKG3"
+        src="https://service.monolithon.com/ns.html?id=GTM-P4LTKG3"
         height="0"
         width="0"
         style="display:none;visibility:hidden"></iframe></noscript
