--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,20 @@ const makeTitle = title
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <script is:inline src="https://cookiechimp.com/widget/N8ptMm.js"></script>
+
+    <script>
+      document.addEventListener("astro:page-load", loadChimp);
+      function loadChimp() {
+        let scripEle = document.createElement("script");
+        scripEle.setAttribute(
+          "src",
+          "https://cookiechimp.com/widget/N8ptMm.js",
+        );
+        scripEle.setAttribute("data-astro-exec", "");
+        document.head.appendChild(scripEle);
+      }
+    </script>
+    <!-- <script is:inline src="https://cookiechimp.com/widget/N8ptMm.js"></script> -->
     <link
       rel="icon"
       type="image/svg+xml"
@@ -104,7 +117,6 @@ const makeTitle = title
       data-service="Google Analytics"
       is:inline
     >
-      console.log("triggered by cookie chimp");
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
@@ -123,16 +135,6 @@ const makeTitle = title
         j.src = "https://service.monolithon.com/tyynmnmx.js?st=" + i + dl + "";
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "P4LTKG3");
-    </script>
-    <script type="text/plain" data-category="analytics" is:inline>
-      console.log("triggered by cookie chimp v2");
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "P4LTKG3");
     </script>
   </head>
   <!-- <Cookie /> -->
