refactor: update cookie chimp widget

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,62 +2,72 @@
 import { localizePath } from "astro-i18next";
 import { t } from "i18next";
 
-const footerDetails = 'footer.details'
+const footerDetails = "footer.details";
 export const menuitems = [
-	{
-		title: "ERPNext ",
-		path: "/erpnext"
-	},
-	{
-		title: "footer.monolithon",
-		path: "path_footer.monolithon",
-	},
-	{
-		title: "footer.knowledge",
-		path: "path_footer.knowledge",
-	},
-	{
-		title: "footer.status",
-		path: "path_footer.status",
-	},
-	{
-		title: "footer.privacy-policy",
-		path: "path_footer.privacy-policy",
-	},
-	{
-		title: "footer.refund-policy",
-		path: "path_footer.refund-policy",
-	},
-	{
-		title: "footer.terms-conditions",
-		path: "path_footer.terms-conditions",
-	},
+  {
+    title: "ERPNext ",
+    path: "/erpnext",
+  },
+  {
+    title: "footer.monolithon",
+    path: "path_footer.monolithon",
+  },
+  {
+    title: "footer.knowledge",
+    path: "path_footer.knowledge",
+  },
+  {
+    title: "footer.status",
+    path: "path_footer.status",
+  },
+  {
+    title: "footer.privacy-policy",
+    path: "path_footer.privacy-policy",
+  },
+  {
+    title: "footer.refund-policy",
+    path: "path_footer.refund-policy",
+  },
+  {
+    title: "footer.terms-conditions",
+    path: "path_footer.terms-conditions",
+  },
 ];
 ---
 
 <footer class="pb-12 pt-28 dark:bg-stone-900">
-	<div class="mx-auto max-w-6xl px-6 md:px-12 lg:px-6 xl:px-0">
-		<ul role="list" class="flex flex-wrap items-center justify-center gap-4 py-4 text-gray-600 dark:text-white sm:gap-8">
-			{
-				menuitems.map(
-					(item) =>
-						item && (
-							<li role="listitem">
-								<a href={
-									t(item.path).startsWith('https') ? t(item.path) : localizePath(t(item.path))
-								} class="duration-300 font-medium hover:text-gray-900 dark:hover:text-gray-100">
-									{t(item.title)}
-								</a>
-							</li>
-						)
-				)
-			}
-		</ul>
-		<div class="flex justify-center mt-12 gap-3">
-		</div>
-		<div class="mt-4 text-center flex flex-col">
-			<span class="text-base tracking-wide text-gray-500 dark:text-white">{t(footerDetails)}</span>
-			<span class="text-sm tracking-wide text-gray-400 dark:text-white"></span>
-		</div>
-	</div>
+  <div id="cookiechimp-privacy-trigger" transition:persist></div>
+  <div class="mx-auto max-w-6xl px-6 md:px-12 lg:px-6 xl:px-0">
+    <ul
+      role="list"
+      class="flex flex-wrap items-center justify-center gap-4 py-4 text-gray-600 dark:text-white sm:gap-8"
+    >
+      {
+        menuitems.map(
+          (item) =>
+            item && (
+              <li role="listitem">
+                <a
+                  href={
+                    t(item.path).startsWith("https")
+                      ? t(item.path)
+                      : localizePath(t(item.path))
+                  }
+                  class="duration-300 font-medium hover:text-gray-900 dark:hover:text-gray-100"
+                >
+                  {t(item.title)}
+                </a>
+              </li>
+            ),
+        )
+      }
+    </ul>
+    <div class="flex justify-center mt-12 gap-3"></div>
+    <div class="mt-4 text-center flex flex-col">
+      <span class="text-base tracking-wide text-gray-500 dark:text-white"
+        >{t(footerDetails)}</span
+      >
+      <span class="text-sm tracking-wide text-gray-400 dark:text-white"></span>
+    </div>
+  </div>
 </footer>
