--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -1,52 +1,57 @@
 ---
-import i18next, { changeLanguage } from "i18next";
-import { getCollection } from "astro:content";
-import Layout from "@layouts/Layout.astro";
-import Container from "@components/container.astro";
-import Posts from "@components/blog/posts.astro";
-import Sectionhead from "@components/sectionhead.astro";
 import Pagination from "@components/blog/pagination.astro";
+import Posts from "@components/blog/posts.astro";
+import Container from "@components/container.astro";
+import Sectionhead from "@components/sectionhead.astro";
+import Layout from "@layouts/Layout.astro";
+import { getCollection } from "astro:content";
+import i18next, { changeLanguage } from "i18next";
 
 changeLanguage("en");
 
-export async function getStaticPaths({ paginate }) {changeLanguage('en')
-    var posts = await getCollection("blog", ({ data }) => {
-        return !data.draft;
-    });
-    // Preprocess the posts to split the slugs and get the languages
-    var processedPosts = posts.map((post) => {
-        const [...slug] = post.slug.split("/");
-        let lang = i18next.language;
-        var firstSlug = post.slug.match(/^([^\/]*)\//);
-        if (firstSlug) {
-            lang = firstSlug[1];
-        }
-        return {
-            ...post,
-            slug: slug.join("/"),
-            lang: lang,
-        };
-    });
-    // Filter posts based on the current language
-    const localizedPosts = processedPosts.filter((post) => post.lang === i18next.language);
-    localizedPosts.sort(function (a, b) {
-        return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
-    });
-    return paginate(localizedPosts, {
-        params: { blog: "blog" || undefined },
-        pageSize: 4,
-    });
+export async function getStaticPaths({ paginate }) {
+  changeLanguage("en");
+  var posts = await getCollection("blog", ({ data }) => {
+    return !data.draft;
+  });
+  // Preprocess the posts to split the slugs and get the languages
+  var processedPosts = posts.map((post) => {
+    const [...slug] = post.slug.split("/");
+    let lang = i18next.language;
+    var firstSlug = post.slug.match(/^([^\/]*)\//);
+    if (firstSlug) {
+      lang = firstSlug[1];
+    }
+    return {
+      ...post,
+      slug: slug.join("/"),
+      lang: lang,
+    };
+  });
+  // Filter posts based on the current language
+  const localizedPosts = processedPosts.filter(
+    (post) => post.lang === i18next.language,
+  );
+  localizedPosts.sort(function (a, b) {
+    return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
+  });
+  return paginate(localizedPosts, {
+    params: { blog: "blog" || undefined },
+    pageSize: 4,
+  });
 }
 const { page } = Astro.props;
 ---
 
 <Layout title="Blog" lang="en">
-	<Container>
-		<Sectionhead>
-			<Fragment slot="title">Our Blog</Fragment>
-			<Fragment slot="desc">Discover Industry Insights, Company News, and Expert Opinions.</Fragment>
-		</Sectionhead>
-		<Posts posts={page.data} />
-		<Pagination class="mt-20" prevUrl={page.url.prev} nextUrl={page.url.next} />
-	</Container>
+  <Container>
+    <Sectionhead>
+      <Fragment slot="title">Our Blog</Fragment>
+      <Fragment slot="desc">
+        Discover Industry Insights, Company News, and Expert Opinions.
+      </Fragment>
+    </Sectionhead>
+    <Posts posts={page.data} />
+    <Pagination class="mt-20" prevUrl={page.url.prev} nextUrl={page.url.next} />
+  </Container>
 </Layout>
