--- a/src/pages/blog/category/[category].astro
+++ b/src/pages/blog/category/[category].astro
@@ -1,47 +1,57 @@
 ---
-import i18next, { changeLanguage } from "i18next";
-import { getCollection } from "astro:content";
-import Layout from "@layouts/Layout.astro";
-import Container from "@components/container.astro";
 import Posts from "@components/blog/posts.astro";
+import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-import Pagination from "@components/blog/pagination.astro";
+import Layout from "@layouts/Layout.astro";
+import { getCollection } from "astro:content";
+import i18next, { changeLanguage } from "i18next";
 
 changeLanguage("en");
 
-export async function getStaticPaths() {changeLanguage('en')
-    const posts = await getCollection("blog", ({ data }) => {
-        return !data.draft && data.publishDate < new Date();
-    });
-    const localizedPosts = posts.filter((page) => {
-        const [lang, ...slug] = page.slug.split("/");
-        return lang === i18next.language;
-    });
-    const categories = new Set();
-    localizedPosts.map((post) => {
-        Array.isArray(post.data.category) && post.data.category.map((category) => categories.add(category.toLowerCase()));
-    });
-    return Array.from(categories).map((category) => {
-        return {
-            params: { category: category },
-            props: {
-                posts: localizedPosts.filter((post) => Array.isArray(post.data.category) && post.data.category.find((elem) => elem.toLowerCase() === category)),
-                category: category,
-                lang: i18next.language,
-            },
-        };
-    });
+export async function getStaticPaths() {
+  changeLanguage("en");
+  const posts = await getCollection("blog", ({ data }) => {
+    return !data.draft && data.publishDate < new Date();
+  });
+  const localizedPosts = posts.filter((page) => {
+    const [lang, ...slug] = page.slug.split("/");
+    return lang === i18next.language;
+  });
+  const categories = new Set();
+  localizedPosts.map((post) => {
+    Array.isArray(post.data.category) &&
+      post.data.category.map((category) =>
+        categories.add(category.toLowerCase()),
+      );
+  });
+  return Array.from(categories).map((category) => {
+    return {
+      params: { category: category },
+      props: {
+        posts: localizedPosts.filter(
+          (post) =>
+            Array.isArray(post.data.category) &&
+            post.data.category.find((elem) => elem.toLowerCase() === category),
+        ),
+        category: category,
+        lang: i18next.language,
+      },
+    };
+  });
 }
 // Get the post directly from the prop on render
 const { posts, category, lang } = Astro.props;
 ---
 
 <Layout title={`Category - ${category}`} lang="en">
-	<Container>
-		<Sectionhead>
-			<Fragment slot="title">{category}</Fragment>
-			<Fragment slot="desc">ERPNext, Frappe, Odoo and other IT news for beginners and advanced users.</Fragment>
-		</Sectionhead>
-		<Posts posts={posts} />
-	</Container>
+  <Container>
+    <Sectionhead>
+      <Fragment slot="title">{category}</Fragment>
+      <Fragment slot="desc">
+        ERPNext, Frappe, Odoo and other IT news for beginners and advanced
+        users.
+      </Fragment>
+    </Sectionhead>
+    <Posts posts={posts} />
+  </Container>
 </Layout>
