fix: cookie chimp revert

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const makeTitle = title
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
 
-    <!-- <script>
+    <script>
       document.addEventListener("astro:page-load", loadChimp);
       function loadChimp() {
         let scripEle = document.createElement("script");
@@ -43,7 +43,7 @@ const makeTitle = title
         scripEle.setAttribute("data-astro-exec", "");
         document.head.appendChild(scripEle);
       }
-    </script> -->
+    </script>
     <script src="https://cookiechimp.com/widget/N8ptMm.js" is:inline></script>
     <link
       rel="icon"
