fix: WIP 3  googlebot issue

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,8 @@ const makeTitle = title
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
 
+    <meta name="googlebot" content="index, follow" />
+
     <script>
       document.addEventListener("astro:page-load", loadChimp);
       function loadChimp() {
