feat: json ld schema updated

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,7 @@ const makeTitle = title
     <meta name="viewport" content="width=device-width" />
 
     <meta name="googlebot" content="index, follow" />
+    <slot name="rich-text-schema" />
 
     <script>
       document.addEventListener("astro:page-load", loadChimp);
