feat: updated schema

--- a/src/components/jsonLdSchema.astro
+++ b/src/components/jsonLdSchema.astro
@@ -2,7 +2,8 @@
 import type { CollectionEntry } from "astro:content";
 
 type Props = CollectionEntry<"blog">["data"];
-const { title, publishDate, snippet, videoThumbnail } = Astro.props;
+const { title, publishDate, snippet, videoThumbnail, videoContentUrl } =
+  Astro.props;
 
 const htmlString = `{
     "@context": "https://schema.org",
@@ -10,8 +11,9 @@ const htmlString = `{
     "name": "${title}",
     "description": "${snippet.slice(0, 568)}",
     "thumbnailUrl": "${videoThumbnail}",
-    "uploadDate": "${publishDate.toISOString().substring(0, 10)}",
-    "duration": "PT11M30S"
+    "uploadDate": "${publishDate.toISOString()}",
+    "duration": "PT11M30S",
+    "contentUrl": "${videoContentUrl}"
 }`;
 ---
 
