--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,19 +34,17 @@ const makeTitle = title
 
     <meta name="googlebot" content="index, follow" />
     <slot name="rich-text-schema" />
-    <script src="https://cookiechimp.com/widget/N8ptMm.js" is:inline></script>
-
-    <script>
-      document.addEventListener("astro:page-load", loadChimp);
-      function loadChimp() {
-        var scriptEle = document.createElement("script");
-        scriptEle.setAttribute(
-          "src",
-          "https://cookiechimp.com/widget/N8ptMm.js",
-        );
-        scriptEle.setAttribute("data-astro-exec", "");
-        document.head.appendChild(scriptEle);
+    <script is:inline>
+      function runCookieChimp() {
+        var script = document.createElement("script");
+        script.src = "https://cookiechimp.com/widget/N8ptMm.js";
+        script.id = "cookiechimp-js";
+        document.head.appendChild(script);
       }
+
+      // for Astro JS.
+      // listen for other events for different frameworks.
+      document.addEventListener("astro:page-load", runCookieChimp);
     </script>
     <link
       rel="icon"
